objects/TASKRAY__trGlobalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TASKRAY__trChangeItemDebounceDelay__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Batching board transaction delay in ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentageInFuture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trConcurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggles the concurrency feature of TaskRay.</description>
        <inlineHelpText>This toggles TaskRay&apos;s checks for updates from other users. Disabling it will have less impact on Salesforce servers, but there may be issues regarding multiple users updating the same tasks.

Default value is &quot;Checked&quot;</inlineHelpText>
        <label>Notification Polling Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trContactSupportOverride__c</fullName>
        <label>Override Contact Support link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCreateRepeatInFuture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create repeat tasks in the future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomCSSURL__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>trCustomCSSURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableDependencyUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableRecordLockRetry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry transaction on lock exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableSlackIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Slack Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableTimeTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Time Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trGridBuddyURLForProject__c</fullName>
        <defaultValue>&quot;gblite__Grid?gname=Tasks+For+Projects&quot;</defaultValue>
        <label>trGridBuddyURLForProject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideContactSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Contact Support link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_1__c</fullName>
        <defaultValue>&quot;#B0B0B0&quot;</defaultValue>
        <label>List Color 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_2__c</fullName>
        <defaultValue>&quot;#faa732&quot;</defaultValue>
        <label>List Color 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_3__c</fullName>
        <defaultValue>&quot;#49afcd&quot;</defaultValue>
        <label>List Color 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLockDownSharingOnNewProjects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Down Sharing on New Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNestedGroupHierarchy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Public group hierarchy query level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNoLockChangeItemUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle off locking for board transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOptOutOfSortOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of TaskRay Sort Order updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOptOutOfTRSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of standard TaskRay sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPollingInterval__c</fullName>
        <defaultValue>10.000</defaultValue>
        <description>Sets the polling interval in seconds for Taskray&apos;s concurrency feature.</description>
        <inlineHelpText>This value is the interval that TaskRay checks for updates from other users. This value can range from 5 to 99 seconds, with a default value of 10. Higher values reduce Salesforce server impact but increase the time period between update notifications.</inlineHelpText>
        <label>Polling Interval</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trRunTransactionsInWorker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run transactions via worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trRunTransactionsOnMainThread__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_1__c</fullName>
        <defaultValue>&quot;#c3325f&quot;</defaultValue>
        <label>Task Label Color 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_2__c</fullName>
        <defaultValue>&quot;#7a43b6&quot;</defaultValue>
        <label>Task Label Color 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_3__c</fullName>
        <defaultValue>&quot;#216b81&quot;</defaultValue>
        <label>Task Label Color 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTasksOnBoardLimit__c</fullName>
        <defaultValue>6000</defaultValue>
        <label>trTasksOnBoardLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TaskRay Global Settings</label>
</CustomObject>